--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a father, partner, and assistant general manager at Town Hall Brewery</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Minneapolis, MN</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Reading, chess, and video games</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>UX designer at Target</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>South Minneapolis</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Drunk people can't throw pint glasses at me lol</p>
     </section>
 
     <footer id="footer">
