updating our h1 tags

--- a/index.html
+++ b/index.html
@@ -9,31 +9,51 @@
     <link rel="stylesheet" href="css/style.css">
 
 </head>
-
 <body>
+
     <header class='masthead'>
+
         <p class='masthead-intro'>Hi I'm</p>
+
         <h1 class='masthead-heading'>Chris O'Connor</h1>
+
     </header>
+
     <section class="details">
+
       <h1>Introduction</h1>
-      <p>I am a father, partner, and assistant general manager at Town Hall Brewery</p>
+
+      <p>I run a brewery in Minneapolis</p>
+
       <h1>Where I'm From</h1>
-      <p>Minneapolis, MN</p>
+
+      <p>Long Island</p>
+
       <h1>What are your favorite hobbies?</h1>
+
       <p>Reading, chess, and video games</p>
+
       <h1>What's your dream job?</h1>
+
       <p>UX designer at Target</p>
+
       <h1>Where do you live?</h1>
-      <p>South Minneapolis</p>
+
+      <p>Windom neighborhood in South Minneapolis</p>
+
       <h1>Why do you want to be a web developer?</h1>
-      <p>Drunk people can't throw pint glasses at me lol</p>
+
+      <p>I want to help make ideas come to life and create an enjoyable user experience.</p>
     </section>
 
     <footer id="footer">
+
         <ul class="social">
+
           <li><a href="http://www.github.com/usernamehere">Github</a></li>
+
         </ul>
+
     </footer>
 </body>
 
