updating our h1 tags

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <h1>What's your dream job?</h1>
 
-      <p>UX designer at Target</p>
+      <p>Web designer at Target</p>
 
       <h1>Where do you live?</h1>
 
@@ -43,7 +43,7 @@
 
       <h1>Why do you want to be a web developer?</h1>
 
-      <p>I want to help make ideas come to life and create an enjoyable user experience.</p>
+      <p>I want to help make ideas come to life and create an enjoyable user experience</p>
     </section>
 
     <footer id="footer">
